--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,7 @@
 TODO：
 
-1.支持分支和打谱
-2.添加连线分析天天象棋功能
-3.复盘分析对每一步标记加上最优着法
-4.增加云库搜索
-5.增加OBK开局库搜索
-6.增加引擎搜索结果的分支推演功能
-7.配置引擎参数
+.配置引擎参数
+.支持分支和打谱
+.复盘分析对每一步标记加上最优着法
+.增加引擎搜索结果的分支推演功能
+.增加OBK开局库搜索
