--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,12 @@
 TODO：
-.支持分支和打谱
 
-.增加引擎搜索结果的分支推演功能
-.增加OBK开局库搜索
+*支持分支和打谱
+
+*增加引擎搜索结果的分支推演功能
+
+*增加引擎设置功能
+*历史记忆功能，下次打开同一个局面
+*残局挑战增加提示功能
+
+低优先级：
+ *截图识别功能，可以识别pdf或者图片上的棋盘，转换为fen串
